<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">
    <TextView
        android:id="@+id/tv_depot_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:textAlignment="center"
        android:text="@string/depot_order"/>
    <TextView
        android:id="@+id/tv_depot_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/depot_name" />
    <TextView
        android:id="@+id/tv_depot_arrive_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:textAlignment="center"
        android:text="@string/depot_arrive_time" />
    <TextView
        android:id="@+id/tv_depot_drive_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:textAlignment="center"
        android:text="@string/depot_drive_time" />
    <TextView
        android:id="@+id/tv_depot_stay_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:textAlignment="center"
        android:text="@string/depot_stay_time"/>
</LinearLayout>