<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="28dp"
    android:paddingRight="28dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:text="@string/content_title_account_login"
        android:textAlignment="center"
        android:textSize="24sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@color/white">
        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:drawableLeft="@drawable/ic_account"
            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="10dp"
            android:hint="@string/label_et_username"/>
        <include layout="@layout/view_line_horizontal" />
        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_password"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:hint="@string/label_et_password"/>
    </LinearLayout>
    <com.ruffian.library.RTextView
        android:id="@+id/tv_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/label_btn_login"
        app:background_normal="@color/colorMain"
        app:background_pressed="#3F51B5"
        app:background_unable="@color/color_btn_unable"
        app:corner_radius="4dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/label_btn_sign_up"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_btn_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/label_btn_need_help"/>
    </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textAlignment="center"
        android:text="@string/label_functions_tips"
        android:textSize="16sp"
        android:textColor="#6a737d"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp">
        <com.ruffian.library.RTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_icon_history"
            android:drawablePadding="6dp"
            android:padding="6dp"
            app:icon_src_normal="@drawable/ic_history_dark"
            app:icon_direction="top"
            app:icon_height="40dp"
            app:icon_width="40dp"/>
        <com.ruffian.library.RTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_icon_favorite"
            android:drawablePadding="6dp"
            android:padding="6dp"
            app:icon_src_normal="@drawable/ic_like_dark"
            app:icon_direction="top"
            app:icon_height="40dp"
            app:icon_width="40dp"/>
        <com.ruffian.library.RTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_icon_security"
            android:drawablePadding="6dp"
            android:padding="6dp"
            app:icon_src_normal="@drawable/ic_about"
            app:icon_direction="top"
            app:icon_height="40dp"
            app:icon_width="40dp"/>
    </LinearLayout>
</LinearLayout>