<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.per.epx.easytrain.views.activities.SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/view_line_horizontal"
            android:layout_height="12dp"
            android:layout_width="match_parent"/>

        <LinearLayout
            android:id="@+id/pane_set_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">
            <TextView
                style="@style/TextViewInListStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:gravity="center_vertical"
                android:text="@string/header_server_address"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
            <TextView
                android:id="@+id/tv_set_server_tips"
                style="@style/TextViewInListStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tips_server_address_is_not_set"/>
        </LinearLayout>
        <include layout="@layout/view_line_horizontal"/>

        <LinearLayout
            android:id="@+id/pane_check_api_redirect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">
            <CheckedTextView
                android:id="@+id/ctv_check_using_local_api"
                style="@style/TextViewInListStyle"
                android:checkMark="@drawable/selector_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:gravity="center_vertical"
                android:text="@string/header_settings_api_redirect"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
            <TextView
                android:id="@+id/tv_api_redirect_tips"
                style="@style/TextViewInListStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_settings_tips_using_remote_api"/>
        </LinearLayout>
        <include layout="@layout/view_line_horizontal"
            android:layout_height="12dp"
            android:layout_width="match_parent"/>

        <LinearLayout
            android:id="@+id/pane_check_is_debug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">
            <CheckedTextView
                android:id="@+id/ctv_check_is_debug"
                style="@style/TextViewInListStyle"
                android:checkMark="@drawable/selector_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:gravity="center_vertical"
                android:text="@string/header_is_debugging"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
            <TextView
                style="@style/TextViewInListStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tips_open_debug_option_debugging"/>
        </LinearLayout>
        <include layout="@layout/view_line_horizontal"/>
        <LinearLayout
            android:id="@+id/pane_check_clear_on_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">
            <CheckedTextView
                android:id="@+id/ctv_check_clear_on_exit"
                style="@style/TextViewInListStyle"
                android:checkMark="@drawable/selector_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:gravity="center_vertical"
                android:text="@string/header_clear_on_exit"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
            <TextView
                style="@style/TextViewInListStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tips_clear_on_exit"/>
        </LinearLayout>
        <include layout="@layout/view_line_horizontal"/>
        <LinearLayout
            android:id="@+id/pane_keep_drawer_open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">
            <CheckedTextView
                android:id="@+id/ctv_keep_drawer_open"
                style="@style/TextViewInListStyle"
                android:checkMark="@drawable/selector_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:gravity="center_vertical"
                android:text="@string/header_keep_drawer_open"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
            <TextView
                style="@style/TextViewInListStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tips_always_keep_drawer_open_on_click"/>
        </LinearLayout>

        <include layout="@layout/view_line_horizontal"
            android:layout_height="12dp"
            android:layout_width="match_parent"/>

        <LinearLayout
            android:id="@+id/pane_use_wide_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">
            <CheckedTextView
                android:id="@+id/ctv_use_wide_template"
                style="@style/TextViewInListStyle"
                android:checkMark="@drawable/selector_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:gravity="center_vertical"
                android:text="@string/use_wide_template"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
            <TextView
                style="@style/TextViewInListStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tips_use_wide_template_to_show_solution_items"/>
        </LinearLayout>
        <include layout="@layout/view_line_horizontal"/>
        <LinearLayout
            android:id="@+id/pane_set_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">
            <TextView
                style="@style/TextViewInListStyle"
                android:checkMark="@drawable/selector_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:gravity="center_vertical"
                android:text="@string/header_setting_language"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
            <TextView
                android:id="@+id/tv_selected_language"
                style="@style/TextViewInListStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lang_default_name"/>
        </LinearLayout>

        <include layout="@layout/view_line_horizontal"
            android:layout_height="12dp"
            android:layout_width="match_parent"/>
    </LinearLayout>

</ScrollView>